--- a/src/components/row/Row.css
+++ b/src/components/row/Row.css
@@ -1,26 +1,29 @@
-.row_wrapper {
-    color: #fff;
-    margin-bottom: 10px;
-    z-index: 3;
-    margin-left: 5vw;
+.row{
+    color: white;
+    /* margin-left: 20px;
+    margin-top: 101px; */
+    padding:20px
 }
-
-.row_title {
-    font-size: 1.4vw;
-    letter-spacing: 0.7px;
-    margin-bottom: 10px;
-    font-weight: bold;
-    z-index: 3;
-}
-
-.row_card {
+.row_posters{
     display: flex;
-    align-items: center;
-    height: 130px;
-    color: #fff;
+    overflow-y: hidden;
     overflow-x: scroll;
+   
 }
-
-.row_card::-webkit-scrollbar {
+.row_posters::-webkit-scrollbar{
     display: none;
+}
+.rowpost{
+    max-height: 100px;
+    object-fit: contain;
+    margin-left: 10px;
+    width: 100%;
+    cursor: pointer;
+    transition: transform 0.3s ease;
+}
+.rowpost:hover {
+    transform: scale(1.08);
+}
+.largeImg{
+    max-height: 250px;
 }
