--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,10 +1,9 @@
-header{
+.header{
      height: 100vh;
-    /* background-image:url(https://occ-0-3215-3663.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABdjWn_2RkEh-ild1mKTXRY9oH-aEe3H_ejCoXLv9yH5VvUx5XymWbeVOD0B-nvip7rK7AaBHVgKeafFfyUt7Gs37vAjbaztUttJC.webp?r=10a) ; */
-     background-repeat: no-repeat; 
-    /* background-size: cover;
-     background-position: center;   */
+    background-repeat: no-repeat; 
 }
+
+
 .header_inner_shadow{
     position: absolute;
     top: 0;
@@ -20,7 +19,6 @@ header{
 }
 .banner_title{
     color: white;
-    
     
 }
 header img{
@@ -40,7 +38,6 @@ header img{
     width: 50%;
     color: white;
     font-size: 2.1vh ;
-    
     font-weight: 500;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     margin-bottom: 0.1vw;
